tests/ui/fail/arguments/duplicate-shorthand.stderr
error: argument "reason" already set
 --> tests/ui/fail/arguments/duplicate-shorthand.rs:7:58
  |
7 |     let _ = l10n::message!("home", "state.busy", reason, *reason,);
  |                                                          ^^^^^^^

error: argument "reason" already set
  --> tests/ui/fail/arguments/duplicate-shorthand.rs:11:47
   |
11 | #[l10n_message("home", "state.busy", *reason, reason)]
   |                                               ^^^^^^

error: argument "reason" already set
  --> tests/ui/fail/arguments/duplicate-shorthand.rs:23:37
   |
23 |     #[l10n_message(".busy", reason, *reason)]
   |                                     ^^^^^^^
